--- a/angular.json
+++ b/angular.json
@@ -50,9 +50,15 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "./node_modules/@fortawesome/fontawesome-free/css/all.css",
+              "./node_modules/@fortawesome/fontawesome-free/css/solid.css",
+              "./node_modules/ngx-toastr/toastr.css",
+              "src/styles/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
