--- a/package.json
+++ b/package.json
@@ -17,8 +17,14 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@manekinekko/angular-web-bluetooth": "^11.2.2",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.6.0",
+    "ngx-spinner": "^12.0.0",
+    "ngx-toastr": "^14.1.0",
     "rxjs": "~6.6.0",
+    "three": "^0.129.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -28,6 +34,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "@types/three": "^0.128.0",
     "@types/web-bluetooth": "0.0.11",
     "typescript": "~4.3.5"
   }
