--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@manekinekko/angular-web-bluetooth": "^11.2.2",
     "bootstrap": "^4.6.0",
+    "chart.js": "^2.9.4",
     "jquery": "^3.6.0",
+    "ng2-charts": "^2.4.2",
     "ngx-spinner": "^12.0.0",
     "ngx-toastr": "^14.1.0",
     "rxjs": "~6.6.0",
@@ -38,6 +40,7 @@
     "@types/node": "^12.11.1",
     "@types/three": "^0.128.0",
     "@types/web-bluetooth": "0.0.11",
+    "ng2-charts-schematics": "^0.1.7",
     "typescript": "~4.3.5"
   }
 }
