--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@angular-devkit/build-angular": "~12.2.6",
     "@angular/cli": "~12.2.6",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/chart.js": "^2.9.34",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@types/three": "^0.128.0",
