--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chart.js": "^2.9.4",
     "jquery": "^3.6.0",
     "ng2-charts": "^2.4.2",
+    "ngx-device-detector": "^2.1.1",
     "ngx-spinner": "^12.0.0",
     "ngx-toastr": "^14.1.0",
     "rxjs": "~6.6.0",
